# my-utils

./: .gitignore  CMakeLists.txt  README.md  main.cpp
clock/include/: clock.h
clock/src/: clock.cpp
common/: common.cpp
file_operate/: CMakeLists.txt
file_operate/include/: file_operator.h
file_operate/src/: file_operator.cpp
include/: common.h
